--- a/manage-app/templates/landing.html
+++ b/manage-app/templates/landing.html
@@ -36,7 +36,7 @@
 <header>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="#">Навигация</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 			        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -45,16 +45,16 @@
 				<ul class="navbar-nav">
 					<li class="nav-item">
                       <!-- в href указываем id div block куда нам нужно сделать скролл -->
-						<a class="nav-link" href="#carouselExampleIndicators">Carousel</a>
+						<a class="nav-link" href="#carouselExampleIndicators">Карусель</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#cards">Cards</a>
+						<a class="nav-link" href="#cards">Карточки</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#featurette1">Featurette 1</a>
+						<a class="nav-link" href="#featurette1">Функция 1</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#featurette2">Featurette 2</a>
+						<a class="nav-link" href="#featurette2">Функция 2</a>
 					</li>
 				</ul>
 			</div>
