--- a/manage-app2/templates/gre.html
+++ b/manage-app2/templates/gre.html
@@ -3,4 +3,15 @@
 {% block content %}
 {{ super() }}
 Содержимое страницы Проверка поддержки GRE
+<form action="/start_test_gre" method="POST">
+    <!-- скрытый параметр -->
+    <input type="hidden" name="index" value="1">
+    <input type="submit" class="btn btn-dark" value="Button 1">
+</form>
+
+<form action="/start_test_gre" method="POST">
+    <!-- скрытый параметр -->
+    <input type="hidden" name="index" value="2">
+    <input type="submit" class="btn btn-dark" value="Button 2">
+</form>
 {% endblock %}
