--- a/manage-app2/templates/gre.html
+++ b/manage-app2/templates/gre.html
@@ -2,5 +2,36 @@
  
 {% block content %}
 {{ super() }}
+{% for msg in get_flashed_messages() %}
+<div class="flash">{{msg}}</div>
+{% endfor %}
 Содержимое страницы Проверка поддержки GRE
+
+<form action="/start_test_gre" method="POST">
+    <!-- скрытый параметр -->
+    <input type="hidden" name="index" value="1">
+    <input type="submit" class="btn btn-dark" value="Start test">
+</form>
+
+<form action="/start_test_gre" method="POST">
+    <!-- скрытый параметр -->
+    <input type="hidden" name="index" value="2">
+    <input type="submit" class="btn btn-dark" value="Button 2">
+</form>
+
+<html>
+    <head>
+      <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
+      <script src="node_modules/@xterm/xterm/lib/xterm.js"></script>
+    </head>
+    <body>
+      <div id="terminal"></div>
+      <script>
+        var term = new Terminal();
+        term.open(document.getElementById('terminal'));
+        term.write('Hello from \x1B[1;3;31mxterm.js\x1B[0m $ ')
+      </script>
+    </body>
+  </html>
+
 {% endblock %}
