--- a/manage-app2/templates/index.html
+++ b/manage-app2/templates/index.html
@@ -6,9 +6,9 @@
 {%- block secondmenu -%}
 <ul class="secondmenu">
         {% for m in secondmenu -%}
-<li><a href="{{m.url}}">{{m.name}}</a></li>
-         {% endfor -%}
+<li><a href="{{m.url}}">{{m.title}}</a></li>
+        {% endfor -%}
 </ul>
-         {% endblock secondmenu -%}
+        {% endblock secondmenu -%}
 
 {% endblock %}
