--- a/manage-app2/templates/gre.html
+++ b/manage-app2/templates/gre.html
@@ -5,8 +5,15 @@
 {% for msg in get_flashed_messages() %}
 <div class="flash">{{msg}}</div>
 {% endfor %}
-Содержимое страницы Проверка поддержки GRE
-
+Содержимое страницы 
+{{title}}
+{{post}}
+<body>
+    <div class="schema"><img src="{{ image_path }}"  alt="Изображение"></div>
+</body>
+<br>{{test_specification}}
+<br>{{test_progress}}
+<br>{{result}}
 <form action="/start_test_gre" method="POST">
     <!-- скрытый параметр -->
     <input type="hidden" name="index" value="1">
