--- a/manage-app2/templates/cfg.html
+++ b/manage-app2/templates/cfg.html
@@ -3,7 +3,7 @@
 {% block content %}
 {{ super() }}
 Содержимое страницы Заливка конфига<br/>
-<body>
+<!-- <body>
     <a href="Терминал для заливки конфига" target="_blank" style="font-size: 1.4em; text-decoration: none; color:black">Терминал для заливки конфига</a
     >&nbsp;&nbsp;&nbsp;
     </a>
@@ -125,5 +125,5 @@ ch.js"></script>
     const wait_ms = 50;
     window.onresize = debounce(fitToscreen, wait_ms);
     </script>
-</body>
+</body> -->
 {% endblock %}
