--- a/manage-app2/templates/constants.html
+++ b/manage-app2/templates/constants.html
@@ -5,17 +5,10 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash" {{cat}}>{{msg}}</div>
 {% endfor %}
-Текущие настройки подключения
-{%- block constants -%}
-<ul class="constants">
-    {% for m in constants -%}
-<li><a>{{m.title}}:{{m.val}}</a></li>
-        {% endfor -%}
-</ul>
-        {% endblock constants -%} 
-Меню настройки подключения и тестов конфига
 
+Меню настройки подключения к DUT:
 <form action="{{url_for('add_constants')}}" method="post" class="form-contact">
     <p><label> Port console:</label><input type="text" name="port" value="" required</p>
     <p><input type="submit" value="Submitted"</p>
+    
 {% endblock %}
