--- a/manage-app2/templates/reset.html
+++ b/manage-app2/templates/reset.html
@@ -2,5 +2,21 @@
  
 {% block content %}
 {{ super() }}
-Содержимое страницы RESET конфига
+{% for cat, msg in get_flashed_messages(True) %}
+<div class="flash" {{cat}}>{{msg}}</div>
+{% endfor %}
+<br>Используя нижерасположенную кнопку СБРОС КОНФИГУРАЦИИ
+ можно сбросить коммутатор на дефолтные настройки. 
+ <p>ВНИМАНИЕ!</p>
+ <p>Сброс будет проведен сразу после нажатия!</p>
+ <p>Сброс пройдет на коммутаторе, 
+настройки которого указаны в таблице справа вверху
+"Текущие настройки подключения".</p>
+<p> Номер консольного порта можно настроить в МЕНЮ НАСТРОЕК</p>
+<form action="/reset" method="POST">
+    <!-- скрытый параметр -->
+    <input type="hidden" name="index" value="Запущен сброс конфига!">
+    <input type="submit" class="btn btn-dark" value="СБРОС КОНФИГУРАЦИИ">
+{{ data }}
+</form>
 {% endblock %}
