--- a/manage-app2/templates/base.html
+++ b/manage-app2/templates/base.html
@@ -3,48 +3,39 @@
 <head>
 <link type="text/css" href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet" />
 {% block title -%}
-{% if title %}
-         <title><Основные тесты коммутатора Trident> - {{title}}</title>
-         
-{% else %}
-         <title>Основные тесты коммутатора Trident</title>
-         
-{% endif %}
-{% endblock %}
+    {% if title %}
+    <title>Основные тесты коммутатора Trident> - {{title}}</title>
+    {% else %}
+        <title>Основные тесты коммутатора Trident - {{title}}</title>
+    {% endif %}
+{% endblock title %}
 </head>
 <body>
-{% block content -%}
-
+    {% block content -%}
 {%- block constants -%}
-<ul class="constants">
-    <table border="1" align="right">
+    <ul class="constants">
+        <table border="1" align="right">
         <tr><td colspan=2> Текущие настройки подключения</tr></td>
-    {% for m in constants -%}
-        <tr><td>{{m.title}}</td><td>{{m.val}}</td></tr>
-    {% endfor -%}
-    </table>
-</ul>
+            {% for m in constants -%}
+                <tr><td>{{m.title}}</td><td>{{m.val}}</td></tr>
+            {% endfor -%}
+        </table>
+    </ul>
 {% endblock constants -%} 
-  
-         {%- block mainmenu -%}
-<ul class="mainmenu">
-         {% for m in menu -%}
-<li><a href="{{m.url}}">{{m.title}}</a></li>
-         {% endfor -%}
-</ul>
-         {% endblock mainmenu -%}
-
-              
-         
+{%- block mainmenu -%}
+    <ul class="mainmenu">
+        {% for m in menu -%}
+            <li><a href="{{m.url}}">{{m.title}}</a></li>
+        {% endfor -%}
+    </ul>
+{% endblock mainmenu -%}
 <div class="clear"></div>
 <div class="content">
-         {% if title -%}
-<h1>{{title}}</h1>
-         {% else -%}
-<h1>Основные тесты коммутатора Trident</h1>
-        
-         {% endif -%}
-
+    {% if title -%}
+        <h1>{{title}}</h1>
+    {% else -%}
+        <h1>Основные тесты коммутатора Trident</h1>
+    {% endif -%}
 {% endblock -%}
 </div>
 </body>
