--- a/manage-app2/templates/gre.html
+++ b/manage-app2/templates/gre.html
@@ -46,7 +46,7 @@
 </div>
 <br>{{test_progress}}
 <br>{{result}}
-<form action="/1" method="POST">
+<form action="{{url_for('index',id_post='1')}}" method="POST">
     <!-- скрытый параметр -->
     <input type="hidden" name="index" value="1">
     <input type="submit" class="btn btn-dark" value="Start test">
