--- a/manage-app2/templates/index.html
+++ b/manage-app2/templates/index.html
@@ -2,11 +2,11 @@
  
 {% block content %}
 {{ super() }}
-<h2>Tests menu:</h2>
+<h2>Выбор тестов</h2>
 {%- block secondmenu -%}
 <ul class="secondmenu">
         {% for m in secondmenu -%}
-<li><a href="{{m.url}}">{{m.title}}</a></li>
+                <li><a href="{{m.url}}">{{m.title}}</a></li>
         {% endfor -%}
 </ul>
         {% endblock secondmenu -%}
