--- a/manage-app2/templates/reset.html
+++ b/manage-app2/templates/reset.html
@@ -17,6 +17,12 @@
     <!-- скрытый параметр -->
     <input type="hidden" name="index" value="Запущен сброс конфига!">
     <input type="submit" class="btn btn-dark" value="СБРОС КОНФИГУРАЦИИ">
-{{ data }}
+{% for i in result %}
+    {% if 'please' in i %}
+            <br>
+    {% endif %}
+    <li>{{ i }} </li>
+{% endfor %}
+
 </form>
 {% endblock %}
