--- a/manage-app2/templates/cfg.html
+++ b/manage-app2/templates/cfg.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 {{ super() }}
-
-<br>Используя нижерасположенную кнопку НАСТРОЙКА КОНФИГУРАЦИИ"
-можно настроить коммутатор на нужные настройки.
-
+<div class="title">
+Используя ниже расположенные ссылки  
+можно перейти в меню настройки конфигов коммутатора:
+</div>
 {%- block thirdmenu -%}
 <ul class="thirdmenu">
         {% for m in thirdmenu -%}
