--- a/manage-app2/templates/Vtest-1.html
+++ b/manage-app2/templates/Vtest-1.html
@@ -17,50 +17,71 @@
     <p>Начальные условия:  Собрать схему согласно топологии выше.</p>
     <p>Настройки: Выполнить конфигурацию устройств согласно файлам конфигурации.</p>
     <p>Процедура:</p>
-    <p>1.	На DUT1 создать интерфейс Tunnel указав:
-        -	mode gre;
-        -	source xe1;
-        -	destination 100.100.100.x;
-        -	ip address 192.168.0.1/30.
-        </p>
-    <p>2.	На DUT1 создать два статических маршрута:
-        -	к подсети 2.2.2.0/24 через интерфейс Tunnel
-        -	к подсети 100.100.100.0/30 через 200.200.200.x;
-        </p>
-    <p>3.	На DUT2 создать интерфейс Tunnel указав:
-        -	mode gre;
-        -	source xe1;
-        -	destination 200.200.200.x;
-        -	ip address 192.168.0.2/30.
-        </p>
-    <p>4.	На DUT2 создать два статических маршрута:
-        -	к подсети 1.1.1.0/24 через туннельный интерфейс;
-        -	к подсети 200.200.200.0/30 через 100.100.100.x.
-        </p>
-    <p>5.	Посредством CLI убедиться, что интерфейсы Tunnel находятся состоянии «UP».</p>
-    <p>6. Убедиться, что трасерт между хостами проходит через тоннель</p>
-    <p>   Ожидаемый результат:</p>
-    <li> 1.	Поддерживается протокол туннелирования GRE.
-        <p>2.	При передаче трафика посредством GRE отсутствуют потери пакетов,
-        трасерт проходит через тоннель.</p></p>
+    <ol>
+        <li>На DUT1 создать интерфейс Tunnel указав:
+            <ul>
+                <li>mode gre;</li>
+                <li>source xe1;</li>
+                <li>destination 100.100.100.x;</li>
+                <li>ip address 192.168.0.1/30.</li>
+            </ul>
+        </li>
+        <li>На DUT1 создать два статических маршрута:
+            <ul>
+                <li>к подсети 2.2.2.0/24 через интерфейс Tunnel</li>
+                <li>к подсети 100.100.100.0/30 через 200.200.200.x;</li>
+            </ul>
+        </li>
+        <li>На DUT2 создать интерфейс Tunnel указав:
+            <ul>
+                <li>mode gre;</li>
+                <li>source xe1;</li>
+                <li>destination 200.200.200.x;</li>
+                <li>ip address 192.168.0.2/30.</li>
+            </ul>
+        </li>
+        <li>На DUT2 создать два статических маршрута:
+            <ul>
+                <li>к подсети 1.1.1.0/24 через туннельный интерфейс;</li>
+                <li>к подсети 200.200.200.0/30 через 100.100.100.x.</li>
+            </ul>
+        </li>
+        <li>Посредством CLI убедиться, что интерфейсы Tunnel находятся состоянии «UP».</li>
+        <li>Убедиться, что трасерт между хостами проходит через тоннель</li>
+    </ol>
+    <p>Ожидаемый результат:
+        <ol>
+        <li>Поддерживается протокол туннелирования GRE.</li>
+        <li>При передаче трафика посредством GRE отсутствуют потери пакетов,
+            трасерт проходит через тоннель.</li>
+        </ol>
+    
 </div>
-<br>Ниже кнопка вызова тестов:
-
+<hr>
+<p>Ниже находится кнопка вызова тестов:
 <form action="{{ url_for('get_test',id_post='1') }}" method="POST">
     <!-- скрытый параметр -->
     <input type="hidden" name="in" value="1">
-    <input type="submit" class="btn btn-dark" value="Start test">
+    <input type="submit" class="btn btn-dark" value="ЗАПУСК теста">
 </form>
+<br>
+<div class="title">
+    Для перехода на страницу с последним html-отчетом, правой кнопкой окройте ссылку ниже в новом окне.
+    Откроется последний сохранненый в системе отчет: </div>
+<p><a href="file:///home/ssw/Documents/switches/manage-app2/templates/BULAT_TEST_TRIDENT_GRE.html" target="_blank">ОТЧЕТ по тесту в html</a></li>
 
-<p>Для перехода на страницу с последним html-отчетом правой кнопкой окройте ссылку ниже в новом окне: </p>
-<li><a href="file:///home/ssw/Documents/switches/manage-app2/templates/BULAT_TEST_TRIDENT_GRE.html" target="_blank">Отчет по тесту в html</a></li>
-
-<br>Ниже кнопка вызова отчетов сервера Allure:
+    <p>Ниже находится кнопка вызова отчетов сервера Allure:
 <form action=" {{ url_for('get_test',id_post='999') }} " method="GET">
     <!-- скрытый параметр -->
     <input type="hidden" name="in" value="999" >
-    <input type="submit" class="btn btn-dark" value="Отчет сервера Allure">
+    <input type="submit" class="btn btn-dark" value="ОТЧЕТ сервера Allure">
 </form>
+<br>
+<hr>
+<div class="title"> Здесь может быть отчет о выполенном тесте!
+Но он скучный, поэтому выше я сделал кнопку и ссылку на веб-форму отчета!
+</div>
+<br>   
 {% for i in result %}
     {% if ',' in i %}
             <br>
