--- a/manage-app2/templates/constants.html
+++ b/manage-app2/templates/constants.html
@@ -5,8 +5,8 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash" {{cat}}>{{msg}}</div>
 {% endfor %}
-
-Меню настройки подключения к DUT:
+<div class="title">На этой странице можно задать консольный порт для подключения к DUT.
+В меню ниже введите 4-х значный порт вашего устройства:</div>
 <form action="{{url_for('add_constants')}}" method="post" class="form-contact">
     <p><label> Port console:</label><input type="text" name="port" value="" required</p>
     <p><input type="submit" value="Submitted"</p>
