--- a/manage-app2/templates/login.html
+++ b/manage-app2/templates/login.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
  
 {% block content %}
-    {{ super() }}
-    <form action="/login" method="post" class="form-contact">
-        <p><label>ИМЯ <input type="text" name="username" value="" required />
-        <p><label>ПАРОЛЬ <input type="password" name="psw" value="" required />
-        <p><input type="checkbox" name="remainme" /> 
-        <p><input type="submit" value="ВОЙТИ" />
-        <hr align=left width="300px">
-        <p><a href="{{url_for('register')}}">Registration</a>
-        
-    </form>
-
-{% endblock %}
+{{ super() }}
+{% for cat, msg in get_flashed_messages(True) %}
+<div class="flash" {{cat}}>{{msg}}</div>
+{% endfor %}
+<form action="" method="post" class="form-contact"> 
+    <!-- action="" URL будет браться из запроса в браузере -->
+    <p><label>Email: </label> <input type="text" name="email" value="" requied />
+    <p><label>Пароль: </label> <input type="password" name="psw" value="" requied />
+    <p><input type="checkbox" name="remainme" /> Запомнить меня
+    <p><input type="submit" value="Войти" />
+    <hr align=left width="300px">
+    <p><a href="{{url_for('register')}}">Регистрация</a>
+</form>
+    {% endblock %}
