--- a/manage-app2/templates/register.html
+++ b/manage-app2/templates/register.html
@@ -1,18 +1,15 @@
 {% extends 'base.html' %}
  
-
+{% block content %}
 {{ super() }}
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash" {{cat}}>{{msg}}</div>
 {% endfor %}
-{% block content %}
-    <form action="/register" method="post" class="form-contact">
-        <p><label>ИМЯ <input type="text" name="username" value="" required />
-        <p><label>Email <input type="text" name="username" value="" required />
-        <p><label>ПАРОЛЬ <input type="password" name="psw" value="" required />
-        <p><label>Repeat ПАРОЛЬ <input type="password" name="psw" value="" required />
-        <p><input type="submit" value="Registration" />
-        <hr align=left width="300px">        
-    </form>
-
+<form action="/register" method="post" class="form-contact">
+    <p><label>ИМЯ </label> <input type="text" name="name" value="" required />
+    <p><label>Email </label> <input type="text" name="email" value="" required />
+    <p><label>ПАРОЛЬ </label> <input type="password" name="psw" value="" required />
+    <p><label>Repeat ПАРОЛЬ </label> <input type="password" name="psw2" value="" required />
+    <p><input type="submit" value="Registration" />
+</form>
 {% endblock %}
