--- a/manage-app2/templates/cfg_gre.html
+++ b/manage-app2/templates/cfg_gre.html
@@ -17,7 +17,7 @@
     <div>
         <form action="{{url_for('getCfgPage',id_post='1')}}" method="POST"class ="form_contact">
             <!-- скрытый параметр -->
-            <input type="hidden" name="index" value="1">
+            <input type="hidden" name="index" value="Запущена настройка конфигурации устр-ва">
             <input type="submit" class="btn btn-dark" value="НАСТРОЙКА КОНФИГУРАЦИИ">
     </div>
     <br>
