--- a/manage-app2/static/css/styles.css
+++ b/manage-app2/static/css/styles.css
@@ -71,6 +71,15 @@ hr {
   text-align: left;
 }
 
+.flash {padding: 10px;}
+.flash.success {
+         border: 1px solid #21DB56;
+         background: #AEFFC5;
+}
+.flash.error {
+         border: 1px solid #FF4343;
+         background: #FF9C9C;
+}
 
 div.content {
     margin: 10px;
