--- a/manage-app2/templates/reset.html
+++ b/manage-app2/templates/reset.html
@@ -20,5 +20,18 @@
     <input type="submit" class="btn btn-dark" value="СБРОС КОНФИГУРАЦИИ">
 <br>
 
+<script>
+    
+</script>
+
+<li>{{ str_result }} </li>
+<!-- <meta http-equiv="refresh" content="10"> -->
+<!-- {% for i in result %}
+    {% if 'please' in i %}
+            <br>
+    {% endif %}
+    <li>{{ i }} </li>
+{% endfor %} -->
+
 </form>
 {% endblock %}
