--- a/manage-app2/templates/cfg_gre.html
+++ b/manage-app2/templates/cfg_gre.html
@@ -3,11 +3,18 @@
 {% block content %}
     {{ super() }}
     
-    <div class="title">
+    <!-- <div class="title">
         Ниже находится ссылка просмотра конфига под тест GRE:
     </div>
-    <p><a href="file:///home/ssw/Documents/switches/templates_cfg/cfg_GRE.yaml" target="_blank">Конфиг устр-ва под тест GRE</a></li>
-      
+    <p><a href="/read_cfg" target="_blank">Просмотр конфигурации устр-ва под тест GRE</a></li> -->
+    
+    <div>
+        <form action="/read_cfg" method="POST"class ="form_contact">
+            <!-- скрытый параметр -->
+            <input type="hidden" name="index" value="1">
+            <input type="submit" class="btn btn-dark" value="Просмотр конфигурации устр-ва под тест GRE">
+    </div>
+
     <br>
     <div class="title">
         Ниже находится кнопка заливки конфига под тест GRE:
