--- a/manage-app2/templates/Vtest-1.html
+++ b/manage-app2/templates/Vtest-1.html
@@ -122,8 +122,10 @@
     <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
 
+<br>   
+<a class="button"  href="/" >Назад</a>
 
 
-<li>{{ result }} </li>
+{{ result }}
 {% endblock %}
 
