--- a/manage-app2/templates/cfg.html
+++ b/manage-app2/templates/cfg.html
@@ -2,8 +2,8 @@
 {% block content %}
 {{ super() }}
 <div class="title">
-Используя ниже расположенные ссылки  
-можно перейти в меню настройки конфигов коммутатора:
+        Используя ниже расположенные ссылки  
+        можно перейти в меню настройки конфигов коммутатора:
 </div>
 {%- block thirdmenu -%}
 <ul class="thirdmenu">
@@ -13,6 +13,11 @@
 </ul>
         {% endblock thirdmenu -%} 
 
-
+<div class="title">
+        Используя ниже расположенные ссылки  
+        можно перейти в меню загрузки файлов конфигурации:
+</div>
+<p><a href='/upload_file_cfg' target="_blank">Загрузка файла конфигурации в базу</a></li>
+    
 </form>
 {% endblock content%}
