--- a/manage-app2/templates/reset.html
+++ b/manage-app2/templates/reset.html
@@ -50,7 +50,7 @@
     <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
 
-<li>{{ result }} </li>
+{{ result }}
 <!-- <meta http-equiv="refresh" content="10"> -->
 <!-- {% for i in result %}
     {% if 'please' in i %}
