--- a/manage-app2/templates/constants.html
+++ b/manage-app2/templates/constants.html
@@ -1,3 +1,4 @@
+<!-- Страница Настройки -->
 {% extends 'base.html' %}
  
 {% block content %}
@@ -12,15 +13,15 @@
 </form>
 
 <form action="{{url_for('get_ver_sw')}}" method="POST">
-    <input type="hidden" name="index" value="Ver request start.">
-    <input type="submit" class="btn btn-dark" value="VERSION">
+    <input type="hidden" name="index" value="Version request start.">
+    <input type="submit" class="btn btn-dark" value="Показать версию прошивки">
 </form>
 
 {% for i in text %}
     {% if '\n' in i %}
             <br>
     {% endif %}
-    <li>{{ i }} </li>
+        {{ i }} 
 {% endfor %}
 
 {% for cat, msg in get_flashed_messages(True) %}
