--- a/manage-app2/templates/Vtest-1.html
+++ b/manage-app2/templates/Vtest-1.html
@@ -80,7 +80,8 @@
 <hr>
 <div class="title">
     Для перехода на страницу с последним Allure-отчетом, правой кнопкой окройте ссылку ниже в новом окне.
-    Откроется последний сохранненый в системе отчет: </div>
+    Откроется последний сохранненый в системе отчет: 
+</div>
 <p><a href='http://127.0.1.1:38671/index.html' target="_blank">ОТЧЕТ по тесту в Allure</a></li>
 
 <br>
