--- a/manage-app2/static/css/styles.css
+++ b/manage-app2/static/css/styles.css
@@ -103,6 +103,11 @@ div.content {
   padding:50px 0;
 }
 
+.table-link {
+  color: green; /* устанавливаем цвет ссылки */
+  text-decoration: underline; /* добавляем подчеркивание */
+  }
+
 .title{
   display: inline-block;
   text-align: center;
