--- a/manage-app2/templates/upload_file_cfg.html
+++ b/manage-app2/templates/upload_file_cfg.html
@@ -12,11 +12,12 @@
         {% for i in items %}
             <tr>
                 <td><a href="{{ i }}" class="table-link">{{i}}</a></td>
-                <td><a href="{{ url_for('get_file_cfg',filename = i) }}">Ссылка на просмотр файла</a></td>
+                <td><a href="{{ url_for('get_file_cfg',filename = i) }}">Просмотр файла</a></td>
             </tr>
         {% endfor %}
     </table>
     
+
     <br>
     Загрузить новый файл в базу конфигов
     <br>
@@ -26,6 +27,9 @@
       <input type=submit value=Upload>
     </form>
     <br>
+    
+    <a href="{{ url_for('view_cfg_table') }}">Операции с файлом конфига</a>
+
 
 
     {% for cat, msg in get_flashed_messages(True) %}
